--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -1,16 +1,18 @@
 name: Task
-description: 개발 작업
+description: 개발/테스트 단위 작업
 title: "[TASK] "
 labels: ["task"]
 body:
   - type: input
-    id: story
+    id: parent
     attributes:
-      label: 상위 Story
-      placeholder: "#456"
+      description: "상위 Story 또는 Epic 이슈 번호를 입력하세요 (Jira 연동)"
+      placeholder: "#이슈번호 (예: #2, #15)"
+    validations:
+      required: true
 
   - type: textarea
-    id: description
+    id: scope
     attributes:
       label: 작업 내용
       placeholder: User 엔티티 구현
@@ -18,9 +20,9 @@ body:
       required: true
 
   - type: checkboxes
-    id: checklist
+    id: done
     attributes:
-      label: 체크리스트
+      label: Done 기준
       options:
         - label: 코드 작성
         - label: 테스트 작성
