docs : env 섹션 값 수정

--- a/.github/workflows/sync-to-jira.yml
+++ b/.github/workflows/sync-to-jira.yml
@@ -24,7 +24,7 @@ jobs:
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
           JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
-          JIRA_PROJECT_KEY: ${{ vars.JIRA_PROJECT_KEY }}
+          JIRA_PROJECT_KEY: ${{ secrets.JIRA_PROJECT_KEY }}
         with:
           script: |
             const title = context.payload.issue.title;
