refactor : task 이슈 템플릿 내용 수정

--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -20,14 +20,10 @@ body:
     validations:
       required: true
 
-  - type: checkboxes
+  - type: testarea
     id: done
     attributes:
       label: Done 기준
-      options:
-        - label: 코드 작성
-          required: false
-        - label: 테스트 작성
-          required: false
-        - label: 문서 업데이트
-          required: false
+      placeholder: |
+        - [ ] 조건 1
+        - [ ] 조건 2
