refactor : task 이슈 템플릿 내용 수정

--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -20,7 +20,7 @@ body:
     validations:
       required: true
 
-  - type: testarea
+  - type: textarea
     id: done
     attributes:
       label: Done 기준
