chore: 불필요 의존성 제거 및 설정 개선
- libs:security:core 의존성 제거 (product service에서 미사용)
- SecurityConfig.java 삭제 (security starter 제거로 불필요)
- application.yml: default_batch_fetch_size 100 추가 (N+1 방지)
- application.yml: actuator prometheus 엔드포인트 추가
- docker-compose.yml: Zookeeper 4lw whitelist 설정 추가

--- a/servers/services/product/src/main/resources/application.yml
+++ b/servers/services/product/src/main/resources/application.yml
@@ -22,6 +22,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        default_batch_fetch_size: 100
     show-sql: ${JPA_SHOW_SQL:false}
     open-in-view: false
 
@@ -57,7 +58,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: ${ACTUATOR_ENDPOINTS:health,info,metrics}
+        include: ${ACTUATOR_ENDPOINTS:health,info,metrics,prometheus}
   endpoint:
     health:
       show-details: always
