feat: 펀딩 참여 기능 구현 (#183)
- ParticipateRequest/ParticipationResponse DTO 작성
- StockClient: WebClient 기반 Stock TCC Reserve/Cancel 호출
- ParticipationCommandService: QUANTITY_BASED(TCC) / AMOUNT_BASED(직접) 분기 참여
- ParticipationQueryService: 내 참여내역/캠페인별 참여내역 조회
- Swagger API 인터페이스 + 컨트롤러 (Command/Query 분리)
- application.yml에 Stock 서비스 URL 설정 추가

--- a/servers/services/funding/src/main/resources/application.yml
+++ b/servers/services/funding/src/main/resources/application.yml
@@ -45,6 +45,10 @@ app:
     datacenter-id: ${SNOWFLAKE_DATACENTER_ID:1}
     worker-id: ${SNOWFLAKE_WORKER_ID:6}
 
+  # ─── Service URLs ────────────────────────────
+  service:
+    stock-url: ${STOCK_SERVICE_URL:http://localhost:8085}
+
   # ─── OpenAPI ──────────────────────────────────
   openapi:
     enabled: ${OPENAPI_ENABLED:true}
