--- a/servers/services/sales/src/main/resources/application.yml
+++ b/servers/services/sales/src/main/resources/application.yml
@@ -50,6 +50,9 @@ app:
     stock-url: ${STOCK_SERVICE_URL:http://localhost:8085}
     product-url: ${PRODUCT_SERVICE_URL:http://localhost:8084}
 
+  stock-cancel-retry:
+    processing-stale-threshold-seconds: ${STOCK_CANCEL_RETRY_PROCESSING_STALE_THRESHOLD_SECONDS:120}
+
   # ─── OpenAPI ──────────────────────────────────
   openapi:
     enabled: ${OPENAPI_ENABLED:true}
